fixing for missung horizontal scrollbar;

--- a/style/trelloClient.css
+++ b/style/trelloClient.css
@@ -11,9 +11,8 @@
   font-family: sans-serif;
   font-size: 10pt;
   white-space: nowrap;
-  overflow-y: hidden;
-  height: 500px;
-  width: 1050px;
+  overflow-x: auto;
+  overflow-y: auto;
 
 }
 
@@ -25,9 +24,7 @@
 }
 
 #boardLists {
-  overflow-x: auto;
-  overflow-y: auto;
-  height: 440px;
+  /*nothing*/
 }
 
 .list {
